--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
         <img src="cupcake.jpg" alt="cupcake" class="cupcake" />
         <br />
         <label for="price">Price per piece</label><br />
-        <input type="text" class="inputPrice" value="" name="price" />
+        <input
+          type="text"
+          class="input-Price"
+          value=""
+          name="price"
+          onkeyup="showPrice()"
+        />
       </form>
     </div>
 
